[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanecon"
version = "1.0.0"
description = "QuanEcon Core: headless library for Hilbert/QDT/CbD/Quantum-Game/Finance/Money analyses"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mirza Niaz Zaman Elin" }]
requires-python = ">=3.9"
keywords = ["quantum cognition", "decision making", "CbD", "quantum games", "option pricing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0"
]

[project.urls]
Homepage = "https://github.com/yourorg/quanecon"
Documentation = "https://github.com/yourorg/quanecon#readme"
Issues = "https://github.com/yourorg/quanecon/issues"

[project.scripts]
quanecon = "quanecon.cli:main"
